@@ -1,3 +1,8 @@
+2013-08-26
+
+	* libsylph/html.c: properly unescape special characters in links
+	  (#120).
+
 2013-08-16
 
 	* libsylph/imap.c: imap_status(): fixed the parse failure of STATUS response
